# state

./: .gitignore  CMakeLists.txt  state
.github/workflows/: ci-cd.yml
include/: State.h
src/: AfternoonState.cpp  ForenoonState.cpp  NoonState.cpp  Work.cpp  main.cpp
tests/: test_afternoon.cpp  test_forenoon.cpp  test_noon.cpp
